Fixed navbar on mobile devices

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -54,12 +54,8 @@ a {
     color: $brand-color;
     text-decoration: none;
 
-    &:visited {
-        color: darken($brand-color, 15%);
-    }
-
     &:hover {
-        color: $text-color;
+        color: darken($brand-color, 15%);
         text-decoration: underline;
     }
 }
